crates/mir/filetests/tests/valid_programs/real_ops.mir
// @harness parser_roundtrip
// @harness typecheck_validation_passes
(mir
    (func real_ops
        (return_type bool)
        (captures_type unit)
        (entry block0)
        (block block0
            (param c
                (mref unit))
            (param a real)
            (param b real)
            (real.add v0 
                (a b))
            (real.sub v1 
                (v0 a))
            (real.div v2 
                (v1 v0))
            (real.mul v3 
                (v2 b))
            (real.cmp v4 
                (>= v3 a))
            (return (v4)))))
